--- a/kinectfs/Makefile
+++ b/kinectfs/Makefile
@@ -1,7 +1,7 @@
 CFLAGS=-g -I/usr/local/include/libfreenect
 
-kinectfs: main.o
-	gcc -o kinectfs main.o -lixp -lfreenect -lfreenect_sync
+kinectfs: main.o fids.o
+	gcc -o kinectfs main.o fids.o -lixp -lfreenect -lfreenect_sync
 
 clean:
 	rm -f kinectfs depthtoppm *.o *~
